2005-01-16  Evgeniy Kozhuhovskiy  <e.kozhuhovskiy@gmail.com>

	* bforce/nodelist.c (nodelist_open): fixed mask detection

2005-01-12  Andrey Slusar  <anray@users.sourceforge.net>

	* Makefile.in (installdirs): fix compiling when use a bsd
	chown.

	* Makefile.in (bforce/expression.c): fix compiling when use
	a bsd make.

2005-01-12  Evgeniy Kozhuhovskiy  <e.kozhuhovskiy@generation-p.com>

	* bforce/nodelist.c (nodelist_open): rewritten logic

	* bforce/logger.c (log): fixed working with --enable-syslog

	* include/logger.h: fixed some warnings

2005-01-11  Evgeniy Kozhuhovskiy  <e.kozhuhovskiy@generation-p.com>

	* bforce/nodelist.c (nodelist_open): fixed warnings

2005-01-11  Andrey Slusar  <anray@users.sourceforge.net>

	* Makefile.in (CFLAGS): added -fno-builtin.

	* bforce/nodelist.c (nodelist_checkheader): small fixes.

2005-01-10  Evgeniy Kozhuhovskiy  <e.kozhuhovskiy@generation-p.com>

	* bforce/nodelist.c (nodelist_open): added mask detection.
	